<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:shrinkColumns="0"
        android:padding="8dp">

        <TableRow>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/codeView"
                android:text="@string/code_of_product_simple"
                android:gravity="start|center_vertical"/>
        </TableRow>

        <TableRow>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/nameView"
                android:text="@string/name_of_product"
                android:gravity="start|center_vertical"/>
        </TableRow>

        <TableRow>
            <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/remainder"
                android:gravity="start|center_vertical"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/remainderView"
                android:text="@string/remainder_of_product"
                android:gravity="end|center_vertical"/>
        </TableRow>

        <TableRow>
            <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/price"
                android:gravity="start|center_vertical"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/priceView"
                android:text="@string/price_of_product"
                android:gravity="end|center_vertical"/>
        </TableRow>

        <TableRow>
            <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/retail_amount"
                android:gravity="start|center_vertical"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/retailAmountView"
                android:text="(цена * остаток)\u20BD"
                android:gravity="end|center_vertical"/>
        </TableRow>

        <TableRow>
            <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/alcohol_product"
                android:gravity="start|center_vertical"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/markOfAlcoholView"
                android:gravity="end|center_vertical"
                android:text="@string/yes"/>
        </TableRow>

        <TableRow>
            <androidx.appcompat.widget.AppCompatTextView
                android:text="@string/alcohol_content"
                android:gravity="start|center_vertical"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/contentAlcoholView"
                android:gravity="end|center_vertical"
                android:text="0.00"/>
        </TableRow>

    </TableLayout>

</ScrollView>